# fair-temperature

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/fair_temperature/: __init__.py  cli.py  fair_temperature_fit.py  fair_temperature_postprocess.py  fair_temperature_preprocess.py  fair_temperature_project.py  my_FAIR_forward.py
