[project]
name = "fair-temperature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brewster Malevich", email = "bmalevich@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fair==1.6.4",
    "numpy>=2.3.0",
    "pandas>=2.3.0", # Unlisted dep of xarray, not out package directly.
    "xarray[io,types]>=2025.6.0",
]

[project.scripts]
fair-temperature = "fair_temperature:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
